--- a/Tipofthemornin/app/src/main/res/layout/activity_main.xml
+++ b/Tipofthemornin/app/src/main/res/layout/activity_main.xml
@@ -82,7 +82,7 @@
         android:id="@+id/results"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tip amount"
+        tools:text="Tip amount $10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/calculatings"
 
